--- a/course/templates/hod_templates/sidebar_content.html
+++ b/course/templates/hod_templates/sidebar_content.html
@@ -1,7 +1,7 @@
 {% load static %}
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a href="/admin_home" class="brand-link">
     <img src="{% static "dist/img/AdminLTELogo.png" %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
       style="opacity: .8">
     <span class="brand-text font-weight-light">CourseMS</span>
@@ -25,10 +25,10 @@
         <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/add_teacher" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
-              Add Teachers
+              Add Teacher
               <span class="right badge badge-danger">New</span>
             </p>
           </a>
@@ -61,10 +61,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/add_category" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
-              Add Categories
+              Add Category
               <span class="right badge badge-danger">New</span>
             </p>
           </a>
