--- a/course/templates/hod_templates/edit_teacher_template.html
+++ b/course/templates/hod_templates/edit_teacher_template.html
@@ -1,6 +1,6 @@
 {% extends 'hod_templates/base_template.html' %}
 {% block page_title %}
-Edit Teacher  | Username : {{ teacher.user.username }} |  #ID : {{ teacher.user.id }}
+Edit Teacher  | Username : {{ teacher.user.username }} |  Teacher ID : {{ teacher.user.id }}
 {% endblock page_title %}
 {% block main_content %}
     <!-- Main content -->
