--- a/course/templates/hod_templates/home_content.html
+++ b/course/templates/hod_templates/home_content.html
@@ -9,4 +9,5 @@ Home
       </div>
     </section>
     <!-- /.content -->
+    {% block delete_content %}{% endblock delete_content %}
 {% endblock main_content %}
