--- a/course/templates/hod_templates/sidebar_content.html
+++ b/course/templates/hod_templates/sidebar_content.html
@@ -15,7 +15,7 @@
         <img src="{% static "dist/img/user2-160x160.jpg" %}" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a href="#" class="d-block">Alexander Pierce</a>
+        <a href="#" class="d-block">Username</a>
       </div>
     </div>
 
@@ -43,10 +43,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/add_student" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
-              Add Students
+              Add Student
               <span class="right badge badge-danger">New</span>
             </p>
           </a>
@@ -70,7 +70,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/manage_categories" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Categories
@@ -79,10 +79,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/add_course" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
-              Add Courses
+              Add Course
               <span class="right badge badge-danger">New</span>
             </p>
           </a>
@@ -97,7 +97,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/enrollments" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Enrollments
