--- a/course/templates/hod_templates/edit_category_template.html
+++ b/course/templates/hod_templates/edit_category_template.html
@@ -1,6 +1,6 @@
 {% extends 'hod_templates/base_template.html' %}
 {% block page_title %}
-Add Category
+Edit Category |  Category ID : {{ category.id }}
 {% endblock page_title %}
 {% block main_content %}
     <!-- Main content -->
@@ -11,16 +11,17 @@ Add Category
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Add Category</h3>
+                <h3 class="card-title">Edit Category</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" action="/add_category_save" method="post">
+              <form role="form" action="/edit_category_save" method="post">
                   {% csrf_token %}
                 <div class="card-body">
                   <div class="form-group">
                     <label>Course Name </label>
-                    <input type="text" class="form-control" name="category" placeholder="Enter Category">
+                    <input type="text" class="form-control" name="category" placeholder="Enter Category" value="{{ category.category_name }}">
+                    <input type="hidden"  name="category_id"  value="{{ category.id }}">
                   </div>
                    <div class="form-group">
                       {% if messages %}
@@ -39,7 +40,7 @@ Add Category
                 <!-- /.card-body -->
 
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-primary btn-block">Add Category</button>
+                  <button type="submit" class="btn btn-primary btn-block">Save Category</button>
                 </div>
               </form>
             </div>
