--- a/course/templates/hod_templates/add_student_template.html
+++ b/course/templates/hod_templates/add_student_template.html
@@ -2,74 +2,32 @@
 {% block page_title %}
 Add Student
 {% endblock page_title %}
+
 {% block main_content %}
-<!-- Main content -->
+
+{% load static %}
+
 <section class="content">
     <div class="container-fluid">
+
         <div class="row">
             <div class="col-md-12">
                 <!-- general form elements -->
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Add Course</h3>
+                        <h3 class="card-title">Add Student</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/add_student_save" method="post">
-                        {% csrf_token %}
-                        <div class="card-body">
-                            <div class="form-group">
-                                <label>Email address</label>
-                                <input type="email" class="form-control" name="email" placeholder="Enter email">
-                            </div>
-                            <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control" placeholder="Password" name="password">
-                            </div>
-                            <div class="form-group">
-                                <label>First Name</label>
-                                <input type="text" class="form-control" placeholder="First Name" name="first_name">
-                            </div>
-                            <div class="form-group">
-                                <label>Last Name</label>
-                                <input type="text" class="form-control" placeholder="Last Name" name="last_name">
-                            </div>
-                            <div class="form-group">
-                                <label>Username</label>
-                                <input type="text" class="form-control" placeholder="Username" name="username">
-                            </div>
-                            <div class="form-group">
-                                <label>Address</label>
-                                <input type="text" class="form-control" placeholder="Address" name="address">
-                            </div>
-                            <div class="form-group">
-                                {% if messages %}
-                                {% for message in messages %}
-                                {% if message.tags == 'error' %}
-                                <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
-                                {% endif %}
-                                {% if message.tags == 'success' %}
-                                <div class="alert alert-success" style="margin-top:10px">{{ message }}</div>
-                                {% endif %}
-                                {% endfor %}
-                                {% endif %}
-                            </div>
-
-                        </div>
-                        <!-- /.card-body -->
-
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary btn-block">Add Student</button>
-                        </div>
-                    </form>
+                    {% url 'add_student_save' as action_path %}
+                    {% include 'hod_templates/form_template.html' with messages=messages form=form action_path=action_path button_text="Add Student" %}
                 </div>
                 <!-- /.card -->
 
-
-
             </div>
         </div>
-    </div>
+
+    </div><!-- /.container-fluid -->
 </section>
-<!-- /.content -->
+
 {% endblock main_content %}
