--- a/course/templates/hod_templates/add_teacher_template.html
+++ b/course/templates/hod_templates/add_teacher_template.html
@@ -46,10 +46,22 @@ Add Teacher
                                 {% if messages %}
                                 {% for message in messages %}
                                 {% if message.tags == 'error' %}
-                                <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                                    style="margin-top:10px">
+                                    {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
                                 {% endif %}
                                 {% if message.tags == 'success' %}
-                                <div class="alert alert-success" style="margin-top:10px">{{ message }}</div>
+                                <div class="alert alert-success alert-dismissible fade show" role="alert"
+                                    style="margin-top:10px">
+                                    {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
                                 {% endif %}
                                 {% endfor %}
                                 {% endif %}
