--- a/course/templates/hod_templates/sidebar_content.html
+++ b/course/templates/hod_templates/sidebar_content.html
@@ -29,7 +29,6 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Add Teacher
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
@@ -38,7 +37,6 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Teachers
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
@@ -47,16 +45,14 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Add Student
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/manage_students" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Students
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
@@ -65,7 +61,6 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Add Category
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
@@ -74,7 +69,6 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Categories
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
@@ -83,16 +77,14 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Add Course
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
         <li class="nav-item">
-          <a href="/add_teachers" class="nav-link">
+          <a href="/manage_courses" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Courses
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
@@ -101,7 +93,6 @@
             <i class="nav-icon fas fa-th"></i>
             <p>
               Manage Enrollments
-              <span class="right badge badge-danger">New</span>
             </p>
           </a>
         </li>
