--- a/course/templates/hod_templates/edit_teacher_template.html
+++ b/course/templates/hod_templates/edit_teacher_template.html
@@ -1,72 +1,87 @@
 {% extends 'hod_templates/base_template.html' %}
 {% block page_title %}
-Edit Teacher  | Username : {{ teacher.user.username }} |  Teacher ID : {{ teacher.user.id }}
+Edit Teacher | Username : {{ teacher.user.username }} | Teacher ID : {{ teacher.user.id }}
 {% endblock page_title %}
 {% block main_content %}
-    <!-- Main content -->
-    <section class="content">
-      <div class="container-fluid">
-          <div class="row">
-              <div class="col-md-12">
-            <!-- general form elements -->
-            <div class="card card-primary">
-              <div class="card-header">
-                <h3 class="card-title">Edit Teacher</h3>
+<!-- Main content -->
+<section class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <!-- general form elements -->
+        <div class="card card-primary">
+          <div class="card-header">
+            <h3 class="card-title">Edit Teacher</h3>
+          </div>
+          <!-- /.card-header -->
+          <!-- form start -->
+          <form role="form" action="/edit_teacher_save" method="post">
+            {% csrf_token %}
+            <div class="card-body">
+              <div class="form-group">
+                <label>Email address</label>
+                <input type="email" class="form-control" name="email" placeholder="Enter email"
+                  value="{{ teacher.user.email }}">
               </div>
-              <!-- /.card-header -->
-              <!-- form start -->
-              <form role="form" action="/edit_teacher_save" method="post">
-                  {% csrf_token %}
-                <div class="card-body">
-                  <div class="form-group">
-                    <label>Email address</label>
-                    <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{ teacher.user.email }}">
-                  </div>
-                   <div class="form-group">
-                    <label>First Name</label>
-                    <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{ teacher.user.first_name }}">
-                  </div>
-                   <div class="form-group">
-                    <label>Last Name</label>
-                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{ teacher.user.last_name }}">
-                    <input type="hidden"  name="teacher_id" value="{{ teacher.user.id }}">
-                  </div>
-                   <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{ teacher.user.username }}">
-                  </div>
-                  <div class="form-group">
-                    <label>Address</label>
-                    <input type="text" class="form-control" placeholder="Address" name="address" value="{{ teacher.address }}">
-                  </div>
-                      <div class="form-group">
-                      {% if messages %}
-                        {% for message in messages %}
-                        {% if message.tags == 'error' %}
-                        <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
-                        {% endif %}
-                        {% if message.tags == 'success' %}
-                        <div class="alert alert-success" style="margin-top:10px">{{ message }}</div>
-                        {% endif %}
-                        {% endfor %}
-                      {% endif %}
-                    </div>
-
+              <div class="form-group">
+                <label>First Name</label>
+                <input type="text" class="form-control" placeholder="First Name" name="first_name"
+                  value="{{ teacher.user.first_name }}">
+              </div>
+              <div class="form-group">
+                <label>Last Name</label>
+                <input type="text" class="form-control" placeholder="Last Name" name="last_name"
+                  value="{{ teacher.user.last_name }}">
+                <input type="hidden" name="teacher_id" value="{{ teacher.user.id }}">
+              </div>
+              <div class="form-group">
+                <label>Username</label>
+                <input type="text" class="form-control" placeholder="Username" name="username"
+                  value="{{ teacher.user.username }}">
+              </div>
+              <div class="form-group">
+                <label>Address</label>
+                <input type="text" class="form-control" placeholder="Address" name="address"
+                  value="{{ teacher.address }}">
+              </div>
+              <div class="form-group">
+                {% if messages %}
+                {% for message in messages %}
+                {% if message.tags == 'error' %}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert" style="margin-top:10px">
+                  {{ message }}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
-                <!-- /.card-body -->
-
-                <div class="card-footer">
-                  <button type="submit" class="btn btn-primary btn-block">Save Teacher</button>
+                {% endif %}
+                {% if message.tags == 'success' %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert" style="margin-top:10px">
+                  {{ message }}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
-              </form>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
+              </div>
+
             </div>
-            <!-- /.card -->
+            <!-- /.card-body -->
+
+            <div class="card-footer">
+              <button type="submit" class="btn btn-primary btn-block">Save Teacher</button>
+            </div>
+          </form>
+        </div>
+        <!-- /.card -->
 
 
 
-          </div>
-          </div>
       </div>
-    </section>
-    <!-- /.content -->
+    </div>
+  </div>
+</section>
+<!-- /.content -->
 {% endblock main_content %}
