--- a/course/templates/hod_templates/form_template.html
+++ b/course/templates/hod_templates/form_template.html
@@ -2,7 +2,17 @@
     
     {% csrf_token %}
 
-    
+    <div class="card-body">
+        {% for field in form %}
+        <div class="form-group">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {{ field }}
+        </div>
+        {% endfor %}
+    </div>
+    <!-- /.card-body -->
+
     {% if messages %}
     <div class="form-group">
         <div class="col-12">
@@ -27,20 +37,7 @@
     </div>
     {% endif %}
 
-    <div class="card-body">
-        {% for field in form %}
-        <div class="form-group">
-
-            {{ field.errors }}
-            {{ field.label_tag }}
-            {{ field }}
-
-        </div>
-        {% endfor %}
-    </div>
-    <!-- /.card-body -->
-
     <div class="card-footer">
-        <button type="submit" class="btn btn-primary">{{ button_text }}</button>
+        <button type="submit" class="btn btn-primary btn-block">{{ button_text }}</button>
     </div>
 </form>
