--- a/course/templates/hod_templates/base_template.html
+++ b/course/templates/hod_templates/base_template.html
@@ -40,29 +40,17 @@
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
       </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
+    </ul>
+    <h4 style="margin-left: 10px;margin-top: 5px;">Course Management Sytem HOD Login</h4>
+    <ul class="navbar-nav ml-auto">
+      <!-- Messages Dropdown Menu -->
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">
+          Logout
+        </a>
       </li>
     </ul>
-
-    <!-- SEARCH FORM -->
-    <form class="form-inline ml-3">
-      <div class="input-group input-group-sm">
-        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-        <div class="input-group-append">
-          <button class="btn btn-navbar" type="submit">
-            <i class="fas fa-search"></i>
-          </button>
-        </div>
-      </div>
-    </form>
-
-<!-- Right navbar links -->
-    {% include 'hod_templates\notification_template.html' %}
-    </nav>
+  </nav>
 <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
@@ -82,8 +70,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Homepage</li>
+              <li class="breadcrumb-item"><a href="admin_home">Home</a></li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
