--- a/course/templates/hod_templates/add_category_template.html
+++ b/course/templates/hod_templates/add_category_template.html
@@ -19,7 +19,7 @@ Add Category
             {% csrf_token %}
             <div class="card-body">
               <div class="form-group">
-                <label>Course Name </label>
+                <label>Category Name </label>
                 <input type="text" class="form-control" name="category" placeholder="Enter Category">
               </div>
               <div class="form-group">
