--- a/course/templates/hod_templates/sidebar_content.html
+++ b/course/templates/hod_templates/sidebar_content.html
@@ -104,6 +104,14 @@
             </p>
           </a>
         </li>
+        <li class="nav-item">
+          <a href="/my_enrollments" class="nav-link">
+            <i class="nav-icon fas fa-th"></i>
+            <p>
+              My Enrollments
+            </p>
+          </a>
+        </li>
       </ul>
     </nav>
   </div>
