--- a/course/templates/teacher_templates/manage_categories_template.html
+++ b/course/templates/teacher_templates/manage_categories_template.html
@@ -1,6 +1,6 @@
-{% extends 'hod_templates/base_template.html' %}
+{% extends 'teacher_templates/base_template.html' %}
 {% block page_title %}
-Manage Teachers
+Manage Categories
 {% endblock page_title %}
 {% block main_content %}
     <!-- Main content -->
@@ -12,7 +12,7 @@ Manage Teachers
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">Teacher Details</h3>
+                <h3 class="card-title">Category Details</h3>
 
                 <div class="card-tools">
                   <div class="input-group input-group-sm" style="width: 150px;">
@@ -30,29 +30,17 @@ Manage Teachers
                   <thead>
                     <tr>
                       <th>ID</th>
-                      <th>First Name</th>
-                      <th>Last Name</th>
-                      <th>User Name</th>
-                      <th>Email</th>
-                      <th>Address</th>
-                      <th>Last Login</th>
-                      <th>Date Joined</th>
+                      <th>Category Name</th>
                       <th>Action</th>
                     </tr>
                   </thead>
                   <tbody>
-                  {% for teacher in teachers %}
+                  {% for category in category %}
                     <tr>
-                      <td>{{ teacher.user.id }}</td>
-                      <td>{{ teacher.user.first_name }}</td>
-                      <td>{{ teacher.user.last_name }}</td>
-                      <td>{{ teacher.user.username }}</td>
-                      <td>{{ teacher.user.email }}</td>
-                      <td>{{ teacher.address }}</td>
-                      <td>{{ teacher.user.last_login }}</td>
-                      <td>{{ teacher.user.date_joined }}</td>
-                      <td><a href="/edit_teacher/{{ teacher.user.id }}" class="btn btn-success">Edit</a></td>
-                      <td><a href="/delete_teacher/{{ teacher.user.id }}" class="btn btn-danger">Delete</a></td>
+                      <td>{{ category.id }}</td>
+                      <td>{{ category.category_name }}</td>
+                      <td><a href="/teacher_edit_category/{{ category.id }}" class="btn btn-success">Edit</a></td>
+                      <td><a href="/teacher_delete_category/{{ category.id }}" class="btn btn-danger">Delete</a></td>
                     </tr>
                   {% endfor %}
                   </tbody>
