--- a/course/templates/hod_templates/sidebar_content.html
+++ b/course/templates/hod_templates/sidebar_content.html
@@ -25,6 +25,15 @@
         <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
         <li class="nav-item">
+            {% url 'admin_home' as admin_home %}
+            <a href="{{ admin_home }}" class="nav-link {% if request.path == admin_home %} active {% endif %}">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Home
+              </p>
+            </a>
+          </li>
+        <li class="nav-item">
           <a href="/add_teacher" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
