--- a/course/templates/signup_admin_template.html
+++ b/course/templates/signup_admin_template.html
@@ -1,11 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <link rel="icon" type="image/png" sizes="32x32" href="static\dist\img\favicon-32x32.png">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Course Managament System | Log in</title>
+  <title>Student Management System | Signup Admin</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,37 +22,50 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href=#><b>Course</b>MS</a>
+    <a href=#><b>Course</b> Management System</a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign In</p>
+      <p class="login-box-msg"><b>SignUp Admin</b> | CourseMS</p>
 
-      <form action="/doLogin" method="post">
-        {% csrf_token %}
-      <div class="input-group mb-3">
-        <input type="email" class="form-control" placeholder="Email" name="email">
-        <div class="input-group-append">
-          <div class="input-group-text">
-            <span class="fas fa-envelope"></span>
+      <form action="/do_admin_signup" method="post" id="demo-form">
+      {% csrf_token %}
+        <div class="input-group mb-3">
+          <input type="email" class="form-control" placeholder="Email" name="email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="input-group mb-3">
-        <input type="password" class="form-control" placeholder="Password" name="password">
-        <div class="input-group-append">
-          <div class="input-group-text">
-            <span class="fas fa-lock"></span>
+              <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Username" name="username">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
           </div>
         </div>
-      </div>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Password" name="password">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
 
+        <div class="row">
+          <!-- /.col -->
           <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-          </div>
+            <button type="submit" class="btn btn-primary btn-block" >SignUp Admin</button>
+          </div><!-- /.col -->
+
+        </div>
+        <div class="row">
           {% if messages %}
-          <div class="col-12">
+         <div class="col-12">
             {% for message in messages %}
             {% if message.tags == 'success' %}
             <div class="alert alert-success" style="margin-top:10px">{{ message }}</div>
@@ -64,18 +76,16 @@
             {% endfor %}
           </div>
           {% endif %}
-          <!-- /.col -->
-
-        <div class="col-12 text-center">
-          <p class="login-box-msg"><br>Sign Up</p>
-         </div><!-- /.col -->
-       <div class="col-12 text-center">
-            <b>|</b>
-            <a href="{% url 'signup_admin' %}" style="color: red;">Admin</a> <b>|</b>
-            <a href="{% url 'signup_teacher' %}" style="color: orange;">Teacher</a> <b>|</b>
-            <a href="{% url 'signup_student' %}" style="color: cadetblue;">Student</a> <b>|</b>
         </div>
       </form>
+
+      <!-- /.social-auth-links -->
+
+    </div>
+    <!-- /.login-card-body -->
+  </div>
+</div>
+<!-- /.login-box -->
 
 <!-- jQuery -->
 <script src="{% static "plugins/jquery/jquery.min.js" %}"></script>
@@ -83,6 +93,7 @@
 <script src="{% static "plugins/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static "dist/js/adminlte.min.js" %}"></script>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </body>
 </html>
