--- a/course/templates/hod_templates/add_teacher_template.html
+++ b/course/templates/hod_templates/add_teacher_template.html
@@ -20,7 +20,7 @@ Add Teacher
                         <div class="card-body">
                             <div class="form-group">
                                 <label>Email address</label>
-                                <input type="email" class="form-control" name="email" placeholder="Enter email">
+                                <input type="email" class="form-control" placeholder="Enter email" name="email">
                             </div>
                             <div class="form-group">
                                 <label>Password</label>
