--- a/course/templates/hod_templates/edit_teacher_template.html
+++ b/course/templates/hod_templates/edit_teacher_template.html
@@ -20,34 +20,29 @@ Edit Teacher | Username : {{ teacher.user.username }} | Teacher ID : {{ teacher.
             <div class="card-body">
               <div class="form-group">
                 <label>Email address</label>
-                <input type="email" class="form-control" name="email" placeholder="Enter email"
-                  value="{{ teacher.user.email }}">
+                <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{ teacher.user.email }}">
               </div>
               <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" placeholder="Password" name="password"
-                  value="{{ teacher.user.password }}">
+                <input type="password" class="form-control" placeholder="Password" name="password" value="{{ teacher.user.password }}">
             </div>
               <div class="form-group">
                 <label>First Name</label>
-                <input type="text" class="form-control" placeholder="First Name" name="first_name"
-                  value="{{ teacher.user.first_name }}">
+                <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{ teacher.user.first_name }}">
               </div>
               <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control" placeholder="Last Name" name="last_name"
-                  value="{{ teacher.user.last_name }}">
+                <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{ teacher.user.last_name }}">
+              <div class="form-group">
                 <input type="hidden" name="teacher_id" value="{{ teacher.user.id }}">
               </div>
               <div class="form-group">
                 <label>Username</label>
-                <input type="text" class="form-control" placeholder="Username" name="username"
-                  value="{{ teacher.user.username }}">
+                <input type="text" class="form-control" placeholder="Username" name="username" value="{{ teacher.user.username }}">
               </div>
               <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" placeholder="Address" name="address"
-                  value="{{ teacher.address }}">
+                <input type="text" class="form-control" placeholder="Address" name="address" value="{{ teacher.address }}">
               </div>
               <div class="form-group">
                 {% if messages %}
