--- a/course/templates/signup_teacher_template.html
+++ b/course/templates/signup_teacher_template.html
@@ -39,6 +39,22 @@
             </div>
           </div>
         </div>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="First Name" name="first_name">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
+              <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Last name" name="last_name">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
               <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="Username" name="username">
           <div class="input-group-append">
